--- a/2literature-review.tex
+++ b/2literature-review.tex
@@ -7,13 +7,7 @@
 \label{section:litreview}
 
 In this chapter, related theoretical background concepts are first introduced. 
-Following that, the related works in literature are discussed at length in three main sub-sections:
-\begin{enumerate}
- \item Car Park Surveillance Systems
- \item Existing methodology and techniques used for semantic extraction.
- \item Recent methodology and techniques used for semantic retrieval.
-\end{enumerate}
-
+Following that, the related works in literature are discussed at length in three main sub-sections covering the car park surveillance systems; techniques for semantic extraction; and techniques for video retrieval.
 
 
 \section{Related Theoretical Background Concepts}
