--- a/abstract.tex
+++ b/abstract.tex
@@ -13,7 +13,7 @@ The other semantics \emph{i.e.} colour and timestamp information, are used in th
 The proposed method is then tested using semantics extracted from a month's worth of data from the surveyed car park 
 %under various lighting and weather conditions 
 using the average Precision@K and the normalised Discounted Cumulative Gain (nDCG) metrics. The proposed method achieved the best precision score of 86\% for trajectory retrieval and 91\% for vehicle colour retrieval. %the best precision achieved was recorded at 91\%. 
-The average nDCG results scored around the region of $\sim$83\% for both trajectory and colour results. 
+The average normalised Discounted Cumulative Gain (nDCG) results scored around the region of $\sim$83\% for both trajectory and colour results. 
 %As a whole, the proposed method shows promising results as it is fairly accurate, fast, and robust under various test scenarios.
 
 This thesis highlights an overall framework for extracting semantics and translating existing raw video data into %sets of 
