feat: making sure GitHub contains the latest changes.

--- a/mmuthesis.cls
+++ b/mmuthesis.cls
@@ -94,6 +94,7 @@
 % CLARENCE: Use times new romans
 \usepackage{fontspec}
 % \usepackage{newtxtext,newtxmath}
+\setmainfont{Times New Roman}
 \usepackage{mathptmx}
 
 \RequirePackage[T1]{fontenc}
