--- a/thesis.tex
+++ b/thesis.tex
@@ -10,6 +10,9 @@
 \usepackage{float}
 \usepackage[noend]{algcompatible}
 
+\usepackage{fontspec}
+% \setmainfont{Times New Roman}
+
 % for the degree symbol
 \usepackage{siunitx}
 
@@ -104,8 +107,8 @@ breaklines=true,breakatwhitespace=true}
 
 \author{Clarence Cheong Weihan}
 \title{Extraction and Retrieval of Vehicle Semantics for Long-Term Car Park Videos}
-\submissionyear{2021}
-\submissionmonth{March}
+\submissionyear{2020}
+\submissionmonth{October}
 \faculty{Faculty of Computing and Informatics}
 \degree{Master~of~Science (Information~Technology)}
 \qualification{B.Eng.~(Hons), Multimedia University, Malaysia\\%
@@ -161,6 +164,7 @@ Thank you everyone! Much blessings.
 
 \mainmatter
 
+\setmainfont{Times New Roman}
 
 \include{1introduction}
 \include{2literature-review}
